updated starting point
